Add node modules for backend set up.

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
 <body>
     <h1 class="container"><div class="title">PCT CHORE LIST APPLICATION</div>
         </h1>
+       <form action="" method="get"><input type="text" name="name"></form>
+        
     <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
